--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script src="http://inc.the.tl/underscore.js"></script>
-<script src="index3.js"></script>
+<script src="index.js"></script>
 <script>
 
   a = {
